removing versions of requirements and fixing the docker errors

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   crm-app:
     image: djcrm:1
     container_name: crm-app
+    entrypoint: []  # Override the entrypoint
+    command: bash -c "sleep 10 && cd /app && python3 manage.py collectstatic --noinput && python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000"
     environment:
       - DBNAME=crm
       - DBUSER=crm
