--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -11,6 +11,8 @@ RUN apt-get update && apt-get install -y \
     gcc \
     python3-dev \
     libpq-dev \
+    wkhtmltopdf \
+    less \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
