--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   crm-app:
     build:
@@ -15,6 +14,8 @@ services:
       - EMAIL_HOST=mailhog
       - EMAIL_PORT=1025
       - EMAIL_USE_TLS=False
+      - EMAIL_USE_SSL=False
+      - EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - DEFAULT_FROM_EMAIL=crm@example.com
@@ -45,6 +46,12 @@ services:
       - 8025:8025 # Web UI
     networks:
       - nw
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "1025"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
 
   crm-db:
     image: postgres:latest
@@ -83,6 +90,8 @@ services:
       - EMAIL_HOST=mailhog
       - EMAIL_PORT=1025
       - EMAIL_USE_TLS=False
+      - EMAIL_USE_SSL=False
+      - EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - DEFAULT_FROM_EMAIL=crm@example.com
